# iris

./: .gitignore  Cargo.toml  INSTRUCTIONS.md  README.md  devenv.nix
.cargo/: config.toml
config/: iris.toml
src/: app.rs  cli.rs  config.rs  hash.rs  image_io.rs  main.rs  models.rs  text.rs  traits.rs  web.rs  webp_cache.rs
src/db/: mod.rs  schema.rs
src/processors/: cluster_faces.rs  discovery.rs  embeddings.rs  faces.rs  geo.rs  image_quality.rs  metadata.rs  mod.rs  ocr.rs  progress.rs  webp_cache.rs
